tests/neg/i18533/Pet_SCALA_ONLY.java
package i18533;

class Pet permits Cat { // error

}
